- diskdrake:
  o do not offer to check for bad blocks on btrfs (mga#12393)
  o do not warn about no bootloader can boot RAID[^1] as grub2 can (mga#11324)
  o enable bad blocks checking on JFS
- drakboot:
  o allow installing grub2 on XFS /
  o make clear grub2 is installed on ESP under UEFI
- finish-install:
  o drop reload-dm hack
  o drop gnome-reboot hack

Version 17.47 - 30 June 2016

- recognize some missing wireless drivers (mga#16768)
- diskdrake:
  o fix being able to create vfat on UEFI (mga#15698)

Version 17.46 - 24 June 2016

- drakboot:
  o do not alter /etc/default/grub on kernel updates, only when running
    drakboot (mga#18783)

Version 17.45 - 24 June 2016

- diskdrake:
  o keep UUID when formating btrfs (mga#18673)

Version 17.44 - 24 June 2016

- diskdrake:
  o fix preserving UUID when formating jfs/nilfs/xfs
- drakboot:
  o add a "Do not touch ESP or MBR" option (mga#18770)
  o do not offer to pick the disk where to install grub2 on UEFI
  o filter GPT disks w/o a BIOS boot part (mga#18770)
  o warn if grub2 is not installed on MBR/ESP

Version 17.42 - 22 June 2016

- drakboot:
  o add support for crypted grub2 passwords (mga#15930)
  o grub2: do not overwite ESP if not installing on it (mga#15583)
  o grub2: fix setting default entry when in a submenu (mga#18560)

Version 17.41 - 20 June 2016

- drakboot:
  o fix the grub2 post-install check (mga#18739)

Version 17.40 - 20 June 2016

- drakboot:
  o ensure we've the right grub2 flavor (mga#18739)

Version 17.39 - 18 June 2016

- diskdrake:
  o fix ESP tagging in some cases

Version 17.38 - 16 June 2016

- diskdrake:
  o fix offering to create a GRUB_BIOS partition in custom mode (mga#18656)
  o fix inverted test when checking need for a GRUB_BIOS partition (mga#18704)

Version 17.37 - 12 June 2016

- diskdrake:
  o try harder to guess if we need a GRUB_BIOS partition (mga#18656)

Version 17.36 - 11 June 2016

- diskdrake:
  o add a GRUB_BIOS partition if needed (mga#18656)